# gdextension-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: GDExtensionBindings.cmake
gameplay/: CMakeLists.txt
gameplay/src/: extension_registration.cpp  movement.cpp  movement.h
gdproject/: icon.svg.import  node_2d.tscn  project.godot
gdproject/gameplay/: gameplay.gdextension
